test/syntax_error/operator.c
/*
Parsing error: Expected primary expression (int lit, char lit, string lit, identifier or func call) at line 7 column 10 found +
*/

int main() {
    int a;
    a=1-+1;
}